--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ html,body{
     padding: 20px;
     margin: 0 3px;
     border: 2px solid black;
+    background-color: bisque;
     border-radius: 1rem;
     cursor: pointer;
     width: 66px;
