--- a/style.css
+++ b/style.css
@@ -13,9 +13,11 @@ html,body{
     padding: 20px;
     margin: 0 3px;
     border: 2px solid black;
-    background-color: bisque;
+    background-color: rgb(55, 53, 53);
     border-radius: 1rem;
     cursor: pointer;
+    color: white;
+    font-size: 1.5rem;
     width: 66px;
 }
 .conatiner{
@@ -25,6 +27,10 @@ html,body{
     align-items: center;
     gap: 1rem;
     margin: auto;
+    border: 1px solid black;
+    background-color: black;
+    border-radius: 1rem;
+    padding: 1rem;
 }
 .row{
     gap: 1rem;
